jabref: auto updated to 5.7-1