@@ -14,7 +14,8 @@
 
 ROOT=/usr/share/java/jabref
 
-/usr/bin/archlinux-java-run -a 17 -- \
+/usr/bin/archlinux-java-run -a 18 -- \
+--add-modules javafx.controls,javafx.fxml,javafx.swing,javafx.web \
 --add-exports javafx.controls/com.sun.javafx.scene.control=org.controlsfx.controls \
 --add-exports org.controlsfx.controls/impl.org.controlsfx.skin=org.jabref \
 --add-exports javafx.controls/com.sun.javafx.scene.control.behavior=org.controlsfx.controls \
